# pre-commit-poetry-export

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
pre_commit_poetry_export/: poetry_export.py
tests/: test_pre_commit_poetry_export.py
